-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
Test compiler/arraycopy/TestArrayCopyAsLoadsStores.java fails with SIGSEGV when run with -XX:+EnableValhalla.
Stack trace:
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fee3ef1dd24, pid=70325, tid=70339
#
# JRE version: OpenJDK Runtime Environment (11.0) (fastdebug build 11-lworldea+0-2018-07-13-1924574.hseigel.valueTypeslworld.orig)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 11-lworldea+0-2018-07-13-1924574.hseigel.valueTypeslworld.orig, mixed mode, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x153ad24] Parse::array_store_check()+0xe34
Current thread (0x00007fee38637800): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=70339, stack(0x00007fedd45e4000,0x00007fedd46e5000)]
Current CompileTask:
C2: 4973 128 b compiler.arraycopy.TestArrayCopyUtils::doTest (788 bytes)
Stack: [0x00007fedd45e4000,0x00007fedd46e5000], sp=0x00007fedd46e1990, free space=1014k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x153ad24] Parse::array_store_check()+0xe34
V [libjvm.so+0x1523ef0] Parse::array_store(BasicType)+0x1a0
V [libjvm.so+0x152cd38] Parse::do_one_bytecode()+0x828
V [libjvm.so+0x151b12a] Parse::do_one_block()+0x44a
V [libjvm.so+0x151c534] Parse::do_all_blocks()+0xe4
V [libjvm.so+0x1520484] Parse::Parse(JVMState*, ciMethod*, float)+0xe04
V [libjvm.so+0x81796c] ParseGenerator::generate(JVMState*)+0x8c
V [libjvm.so+0xa40ee3] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xd03
V [libjvm.so+0x8156a1] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xd1
V [libjvm.so+0xa4eaf3] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x403
V [libjvm.so+0xa4fab7] CompileBroker::compiler_thread_loop()+0x317
V [libjvm.so+0x17bb907] JavaThread::thread_main_inner()+0x2c7
V [libjvm.so+0x17bbc88] JavaThread::run()+0x278
V [libjvm.so+0x14bbad0] thread_native_entry(Thread*)+0x100
Stack trace:
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fee3ef1dd24, pid=70325, tid=70339
#
# JRE version: OpenJDK Runtime Environment (11.0) (fastdebug build 11-lworldea+0-2018-07-13-1924574.hseigel.valueTypeslworld.orig)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 11-lworldea+0-2018-07-13-1924574.hseigel.valueTypeslworld.orig, mixed mode, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x153ad24] Parse::array_store_check()+0xe34
Current thread (0x00007fee38637800): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=70339, stack(0x00007fedd45e4000,0x00007fedd46e5000)]
Current CompileTask:
C2: 4973 128 b compiler.arraycopy.TestArrayCopyUtils::doTest (788 bytes)
Stack: [0x00007fedd45e4000,0x00007fedd46e5000], sp=0x00007fedd46e1990, free space=1014k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x153ad24] Parse::array_store_check()+0xe34
V [libjvm.so+0x1523ef0] Parse::array_store(BasicType)+0x1a0
V [libjvm.so+0x152cd38] Parse::do_one_bytecode()+0x828
V [libjvm.so+0x151b12a] Parse::do_one_block()+0x44a
V [libjvm.so+0x151c534] Parse::do_all_blocks()+0xe4
V [libjvm.so+0x1520484] Parse::Parse(JVMState*, ciMethod*, float)+0xe04
V [libjvm.so+0x81796c] ParseGenerator::generate(JVMState*)+0x8c
V [libjvm.so+0xa40ee3] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xd03
V [libjvm.so+0x8156a1] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xd1
V [libjvm.so+0xa4eaf3] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x403
V [libjvm.so+0xa4fab7] CompileBroker::compiler_thread_loop()+0x317
V [libjvm.so+0x17bb907] JavaThread::thread_main_inner()+0x2c7
V [libjvm.so+0x17bbc88] JavaThread::run()+0x278
V [libjvm.so+0x14bbad0] thread_native_entry(Thread*)+0x100