8207344: [lworld] hotspot jtreg test TestArrayCopyAsLoadsStores.java fails with EnableValhalla

Reviewed-by: thartmann